--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OpenFlowKit | The Open-Source, White-Label Diagramming Canvas</title>
+  <title>OpenFlowKit — Free Open-Source Diagram Tool for Developers</title>
   <meta name="description"
-    content="OpenFlowKit is a premium, open-source diagramming engine built with React Flow. Native Mermaid.js support, white-label branding, and high-fidelity design system." />
+    content="Create beautiful diagrams for free. Open-source tool with AI, Mermaid.js support, Figma export, and one-click auto-layout. No signup required." />
   <meta name="keywords"
-    content="diagram as code, react flow, mermaid.js, open source diagramming, white-label canvas, flowcharts, architecture diagrams" />
+    content="free diagram tool, open source diagram maker, mermaid.js editor, flowchart tool, architecture diagrams, developer tools, react flow" />
+  <link rel="canonical" href="https://openflowkit.com/" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://openflowkit.com/" />
-  <meta property="og:title" content="OpenFlowKit | The Open-Source, White-Label Diagramming Canvas" />
+  <meta property="og:title" content="OpenFlowKit — Free Open-Source Diagram Tool for Developers" />
   <meta property="og:description"
-    content="The missing link between code and design. Build beautiful, branded flowcharts with our open-source, white-label engine. Diagram as Code, React Flow, and Mermaid.js support." />
+    content="Create beautiful diagrams for free. AI-powered, Mermaid.js support, Figma export, and auto-layout. No signup required." />
   <meta property="og:image" content="https://openflowkit.com/og-image.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://openflowkit.com/" />
-  <meta property="twitter:title" content="OpenFlowKit | The Open-Source, White-Label Diagramming Canvas" />
+  <meta property="twitter:title" content="OpenFlowKit — Free Open-Source Diagram Tool for Developers" />
   <meta property="twitter:description"
-    content="The missing link between code and design. Build beautiful, branded flowcharts with our open-source, white-label engine. Diagram as Code, React Flow, and Mermaid.js support." />
+    content="Create beautiful diagrams for free. AI-powered, Mermaid.js support, Figma export, and auto-layout. No signup required." />
   <meta property="twitter:image" content="https://openflowkit.com/og-image.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
